--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -12,17 +12,17 @@
   <body>
       <div class="wrapper">
         <div class="title">Se connecter</div>
-        <form [formGroup]="registerF" (ngSubmit)="loginStudent()" action="#">
+        <form [formGroup]="loginEF" (ngSubmit)="loginStudent()" action="#">
           <div class="field">
             <input type="email" [(ngModel)]="student.email" id="email" name="email"formControlName="email"
             pattern="^[a-zA-Z0-9._%+-]+@\etu\.uae\.ac\.ma$">
-          <small class="form-text text-muted" *ngIf="registerF.get('email')?.touched && registerF.get('email')?.invalid && !registerF.get('email')?.errors?.['pattern']" style="color: red !important;">Email est requis.</small>
-          <small class="form-text text-muted" *ngIf="registerF.get('email')?.touched && registerF.get('email')?.errors?.['pattern']" style="color: red !important;">Email invalide.</small>
+          <small class="form-text text-muted" *ngIf="loginEF.get('email')?.touched && loginEF.get('email')?.invalid && !loginEF.get('email')?.errors?.['pattern']" style="color: red !important;">Email est requis.</small>
+          <small class="form-text text-muted" *ngIf="loginEF.get('email')?.touched && loginEF.get('email')?.errors?.['pattern']" style="color: red !important;">Email invalide.</small>
             <label>Adresse email *</label>
           </div>
           <div class="field">
             <input type="password" [(ngModel)]="student.motdepasse" id="motdepasse" name="motdepasse"formControlName="motdepasse">
-            <small class="form-text text-muted" *ngIf="registerF.get('motdepasse')?.touched && registerF.get('motdepasse')?.invalid" style="color: red !important;">Mot de passe est requis.</small>
+            <small class="form-text text-muted" *ngIf="loginEF.get('motdepasse')?.touched && loginEF.get('motdepasse')?.invalid" style="color: red !important;">Mot de passe est requis.</small>
             <label>Mot de passe *</label>
           </div>
           <div class="content">
