--- a/src/app/components/logina/logina.component.html
+++ b/src/app/components/logina/logina.component.html
@@ -12,15 +12,15 @@
   <body>
       <div class="wrapper">
         <div class="title">Se connecter</div>
-        <form [formGroup]="registerF" (ngSubmit)="loginAdmin()" action="#">
+        <form [formGroup]="loginAF" (ngSubmit)="loginAdmin()" action="#">
           <div class="field">
             <input type="email" [(ngModel)]="admin.email" id="email" name="email" formControlName="email">
-          <small class="form-text text-muted" *ngIf="registerF.get('email')?.touched && registerF.get('email')?.invalid && !registerF.get('email')?.errors?.['pattern']" style="color: red !important;">Email est requis.</small>
+          <small class="form-text text-muted" *ngIf="loginAF.get('email')?.touched && loginAF.get('email')?.invalid && !loginAF.get('email')?.errors?.['pattern']" style="color: red !important;">Email est requis.</small>
             <label>Adresse email *</label>
           </div>
           <div class="field">
             <input type="password" [(ngModel)]="admin.motdepasse" id="motdepasse" name="motdepasse" formControlName="motdepasse">
-            <small class="form-text text-muted" *ngIf="registerF.get('motdepasse')?.touched && registerF.get('motdepasse')?.invalid" style="color: red !important;">Mot de passe est requis.</small>
+            <small class="form-text text-muted" *ngIf="loginAF.get('motdepasse')?.touched && loginAF.get('motdepasse')?.invalid" style="color: red !important;">Mot de passe est requis.</small>
             <label>Mot de passe *</label>
           </div>
           <div class="field">
