--- a/src/app/components/c1filliers/c1filliers.component.html
+++ b/src/app/components/c1filliers/c1filliers.component.html
@@ -38,7 +38,7 @@
                     </figure>
 				</div>
                 <div class="table__item">
-                    <figure class="card" routerLink="#" >
+                    <figure class="card" routerLink="/semestres" >
                         <img src="../../../assets/photos/info.png" alt="" class="card__image" />
                         <figcaption class="card__body">
                         <h2 class="card__title">Sciences Mathématiques Informatiques (SMI) </h2> 
