--- a/src/app/components/navbar2/navbar2.component.html
+++ b/src/app/components/navbar2/navbar2.component.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
-</head>
-<body>
-   <nav>
-      <div class="logo" ><a routerLink="/logina">
-         <img src="../../../assets/photos/yas Png.png" width="153px" height="70px" id=logo alt="Logo image" style="margin-left: -60px;margin-top: -5px;" /></a>
-      </div>
-      <label for="btn" class="icon">
-      <span class="fa fa-bars"></span>
-      </label>
-      <input type="checkbox" id="btn">
-      <ul>
-         <li><a routerLink="/listeProf" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >PROFESSEUR</a></li>
-         <li><a routerLink="/listeEtudiant"routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >ETUDIANT</a></li>
-         <li><a routerLink="/listeMessage"routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >MESSAGE</a></li>
-         <li><a routerLink="/"routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >DECONNECION</a></li>
-      </ul>
-   </nav>
-   <script>
-      $('.icon').click(function(){
-        $('span').toggleClass("cancel");
-      });
-   </script>
-</body>
-</html>
+<!-- Created By CodingNepal - www.codingnepalweb.com -->
+<html lang="en" dir="ltr">
+   <head>
+      <meta charset="utf-8">
+      <title>Responsive Drop-down Menu Bar</title>
+      <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   </head>
+   <body>
+      <nav>
+         <div class="logo" ><a routerLink="/connexionAdmin">
+            <img src="../../../assets/photos/yas Png.png" width="153px" height="70px" id=logo alt="Logo image" style="margin-left: -60px;margin-top: -5px;" />
+           </a>
+         </div>
+         <label for="btn" class="icon">
+         <span class="fa fa-bars"></span>
+         </label>
+         <input type="checkbox" id="btn">
+         <ul>
+            <li><a routerLink="/listeProf" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >PROFESSEUR</a></li>
+            <li><a routerLink="/listeEtudiant"routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >ETUDIANT</a></li>
+            <li><a routerLink="/listeMessage"routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >MESSAGE</a></li>
+           <li><a routerLink="/"routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" >DECONNECION</a></li>
+            <li>
+               <label for="btn-1" class="show"></label>
+               <a href="#"></a>
+               <input type="checkbox" id="btn-1">
 
+            </li> 
+         </ul>
+      </nav>
+      <script>
+         $('.icon').click(function(){
+           $('span').toggleClass("cancel");
+         });
+      </script>
+   </body>
+</html>
