--- a/src/app/components/tableau-p/tableau-p.component.html
+++ b/src/app/components/tableau-p/tableau-p.component.html
@@ -109,11 +109,11 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel1">Suppression d'un message</h5>
+                <h5 class="modal-title" id="exampleModalLabel1">Suppression d'un professeur</h5>
               </div>
               <div class="modal-body1">
                 <form  (ngSubmit)="deleteProf()">
-                        Est-ce que vous êtes sûre?
+                       <p style="text-indent: 30px; font-size: large;"> Est-ce que vous êtes sûre ? </p>
                   <div class="modal-footer">                    
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
                     <input position="center" data-bs-dismiss="modal" type="submit" value="Supprimer" class="btn btn-danger">
