--- a/src/app/components/tableau/tableau.component.html
+++ b/src/app/components/tableau/tableau.component.html
@@ -146,7 +146,7 @@
               </div>
               <div class="modal-body1">
                 <form (ngSubmit)="deleteStudent()">
-                  Est-ce que vous êtes sûre ?
+                  <p style="text-indent: 30px; font-size: large;"> Est-ce que vous êtes sûre ? </p>
                   <div class="modal-footer">                    
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
                     <input position="center" data-bs-dismiss="modal" type="submit" value="Supprimer" class="btn btn-danger">
