--- a/src/app/components/fichier/fichier.component.html
+++ b/src/app/components/fichier/fichier.component.html
@@ -65,7 +65,7 @@
                          <p style="text-indent: 30px; font-size: large;"> Est-ce que vous êtes sûre ? </p>
                     <div class="modal-footer">                    
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
-                      <input position="center" data-bs-dismiss="modal" type="submit" value="Supprimer" class="btn btn-danger">
+                      <input position="center" data-bs-dismiss="modal" onclick="window.location.reload()" type="submit" value="Supprimer" class="btn btn-danger">
                     </div>
                   </form>
                 </div>             
