--- a/src/app/components/semestre/semestre.component.html
+++ b/src/app/components/semestre/semestre.component.html
@@ -161,12 +161,12 @@
       </div>
       <div class="modal-body">
         <ul>
-          <a style="color: black; font-size: medium;" href=""><li>M33 PROGRAMMATION EVENEMENTIELLE EN JAVA</li></a>
-          <a style="color: black; font-size: medium;" href=""><li>M34 RESEAUX II</li></a>
-          <a style="color: black; font-size: 100%;"  href=""><li>M35 PROGRAMMATION SYSTEME</li></a>
-          <a style="color: black; font-size: medium;"href=""><li>M36 DEVELOPPEMENT WEB</li></a>
-          <a style="color: black; font-size: medium;"href=""><li>M37 PROJET TUTORE I</li></a>
-          <a style="color: black; font-size: medium;"href=""><li>M38 PROJET TUTORE II</li></a>
+          <a style="color: black; font-size: medium;" routerLink="/"><li>M33 PROGRAMMATION EVENEMENTIELLE EN JAVA</li></a>
+          <a style="color: black; font-size: medium;" routerLink="/"><li>M34 RESEAUX II</li></a>
+          <a style="color: black; font-size: 100%;"  routerLink="/"><li>M35 PROGRAMMATION SYSTEME</li></a>
+          <a style="color: black; font-size: medium;"routerLink="/"><li>M36 DEVELOPPEMENT WEB</li></a>
+          <a style="color: black; font-size: medium;"routerLink="/"><li>M37 PROJET TUTORE I</li></a>
+          <a style="color: black; font-size: medium;"routerLink="/"><li>M38 PROJET TUTORE II</li></a>
        </ul> 
       </div>
       <div class="modal-footer">
