--- a/src/app/components/semestre/semestre.component.html
+++ b/src/app/components/semestre/semestre.component.html
@@ -161,7 +161,7 @@
       </div>
       <div class="modal-body">
         <ul>
-          <a style="color: black; font-size: medium;" routerLink="/"><li>M33 PROGRAMMATION EVENEMENTIELLE EN JAVA</li></a>
+          <a style="color: black; font-size: medium;" href="/archicour"><li>M33 PROGRAMMATION EVENEMENTIELLE EN JAVA</li></a>
           <a style="color: black; font-size: medium;" routerLink="/"><li>M34 RESEAUX II</li></a>
           <a style="color: black; font-size: 100%;"  routerLink="/"><li>M35 PROGRAMMATION SYSTEME</li></a>
           <a style="color: black; font-size: medium;"routerLink="/"><li>M36 DEVELOPPEMENT WEB</li></a>
