--- a/src/app/components/navbar5/navbar5.component.html
+++ b/src/app/components/navbar5/navbar5.component.html
@@ -19,9 +19,9 @@
          </label>
          <input type="checkbox" id="btn">
          <ul>
-            <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" href="/archicourp" >COUR</a></li>
-            <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" href="/architdpp" >TD\TP</a></li>
-            <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" href="/archiexamp" >EXAMEN</a></li>
+            <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/archicourp" >COUR</a></li>
+            <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/architdpp" >TD\TP</a></li>
+            <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/archiexamp" >EXAMEN</a></li>
             <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/" >DECONNECTION</a></li>
             <li>
                <label for="btn-1" class="show"></label>
