--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -25,9 +25,9 @@
             <small class="form-text text-muted" *ngIf="loginEF.get('motdepasse')?.touched && loginEF.get('motdepasse')?.invalid" style="color: red !important;">Mot de passe est requis.</small>
             <label>Mot de passe *</label>
           </div>
-          <div class="content">
-            <div class="pass-link"(click)="handleForgetPasswordAction()">Mot de passe oublié ?</div> <!--(click)="handleForgetPasswordAction()"-->
-          </div>
+        <!--  <div class="content">
+            <div class="pass-link"(click)="handleForgetPasswordAction()">Mot de passe oublié ?</div> (click)="handleForgetPasswordAction()"
+          </div>-->
           <div class="field">
             <input type="submit" value="Se Connecter">
           </div>
