--- a/src/app/components/navbar4/navbar4.component.html
+++ b/src/app/components/navbar4/navbar4.component.html
@@ -19,10 +19,10 @@
          </label>
          <input type="checkbox" id="btn">
          <ul>
-            <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/archicour" >COUR</a></li>
+            <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/archicour" >COURS</a></li>
             <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/architdp" >TD\TP</a></li>
-            <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/archiexam" >EXAMEN</a></li>
-            <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/" >DECONNECTION</a></li>
+            <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/archiexam" >EXAMENS</a></li>
+            <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/" >DECONNEXION</a></li>
             <li>
                <label for="btn-1" class="show"></label>
                <a href="#"></a>
