--- a/src/app/components/navbar5/navbar5.component.html
+++ b/src/app/components/navbar5/navbar5.component.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal - www.codingnepalweb.com -->
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
@@ -19,10 +18,10 @@
          </label>
          <input type="checkbox" id="btn">
          <ul>
-            <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/archicourp" >COUR</a></li>
+            <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/archicourp" >COURS</a></li>
             <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/architdpp" >TD\TP</a></li>
-            <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/archiexamp" >EXAMEN</a></li>
-            <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/" >DECONNECTION</a></li>
+            <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/archiexamp" >EXAMENS</a></li>
+            <li><a routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}" routerLink="/" >DECONNEXION</a></li>
             <li>
                <label for="btn-1" class="show"></label>
                <a href="#"></a>
