--- a/src/app/components/registrer/registrer.component.html
+++ b/src/app/components/registrer/registrer.component.html
@@ -56,7 +56,7 @@
           </div>      
         </div>
         <div class="button">
-          <input type="submit" value="S'inscrire" [disabled]="!registerF.invalid">
+          <input type="submit" value="S'inscrire" [disabled]="registerF.invalid">
         </div>
         <div class="signup-link"><a routerLink="/connexionEtudiant">Se connecter</a></div>
       </form>
