--- a/src/app/components/archicour/archicour.component.css
+++ b/src/app/components/archicour/archicour.component.css
@@ -1,13 +1,19 @@
 table {
-    width: 100%;
+  width: 100%;
 }
 
 body {
-    background: linear-gradient(135deg, rgb(121, 120, 120), #f0b851);
-  }
-  td{
-    background-color: white;
-  }
-  tr{
-    background-color: #FFA500;
-  }
+  background: linear-gradient(135deg, rgb(121, 120, 120), #f0b851);
+}
+td{
+  background-color: white;
+}
+tr{
+  background-color: #FFA500;
+}
+.mt-0{
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 0;
+
+}
