--- a/src/app/components/archicour/archicour.component.html
+++ b/src/app/components/archicour/archicour.component.html
@@ -1,4 +1,4 @@
-<app-navbar4></app-navbar4>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,25 +8,32 @@
 </head>
 <body>
 
-    
-    <input style="margin-bottom: 2px; margin-top: 5%; margin-left: 1%;" class="search" type="text" name="search" [(ngModel)]="searchText" placeholder="Chercher document ">
-<table class="table table-bordered">
-    <thead>
-      <tr>
-        <th>Nom</th>
-        <th>Type</th>
-        <th>Installer</th>
-        
-      </tr>
-    </thead>
-    <tbody class="tbody" >
-      <tr *ngFor="let file of files| filter:searchText" >
-        <td>{{ file.filename }}</td>
-        <td>{{ file.contentType }}</td>
-        <td><button class="btn btn-warning" type="button" (click)="downloadFile(file.id)">Download</button></td>
-      </tr>
-    </tbody>
-  </table>
+    <app-navbar4></app-navbar4>
+    <div class="mt-0">
+      <div class="input-group rounded" style="margin-bottom: 5px; margin-left: 4px; width: 50%; margin-top: 5%;">
+        <input type="search"  name="search"  [(ngModel)]="searchText" class="form-control rounded" placeholder="Chercher professeur" aria-label="Search" aria-describedby="search-addon" />
+        <span class="input-group-text border-0" id="search-addon">
+          <i class="fas fa-search" ></i>
+        </span>
+      </div>
+      <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th>Nom</th>
+              <th>Type</th>
+              <th>Télécharger</th>
+              
+            </tr>
+          </thead>
+          <tbody class="tbody" >
+            <tr *ngFor="let file of files| filter:searchText" >
+              <td>{{ file.filename }}</td>
+              <td>{{ file.contentType }}</td>
+              <td><button class="btn btn-warning" type="button" (click)="downloadFile(file.id)">Télécharger</button></td>
+            </tr>
+          </tbody>
+        </table>
+    </div>
     
 </body>
 </html>
