--- a/src/app/components/archiexamenp/archiexamenp.component.css
+++ b/src/app/components/archiexamenp/archiexamenp.component.css
@@ -15,6 +15,12 @@
   .tableau{
     margin-left: 1%;
   }
+  .mt-0{
+    margin-left: 16px;
+    margin-right: 16px;
+    margin-top: 0;
+
+}
 
 
   td{
