--- a/src/app/components/architdpp/architdpp.component.css
+++ b/src/app/components/architdpp/architdpp.component.css
@@ -16,6 +16,13 @@
     margin-left: 1%;
   }
 
+  .mt-0{
+    margin-left: 16px;
+    margin-right: 16px;
+    margin-top: 0;
+
+}
+
 
   td{
     background-color: white;
