--- a/src/app/components/loginp/loginp.component.html
+++ b/src/app/components/loginp/loginp.component.html
@@ -23,9 +23,9 @@
             <small class="form-text text-muted" *ngIf="loginPF.get('motdepasse')?.touched && loginPF.get('motdepasse')?.invalid" style="color: red !important;">Mot de passe est requis.</small>
             <label>Mot de passe *</label>
           </div>
-          <div class="content">
+        <!-- <div class="content">
             <div class="pass-link"><a routerLink="/mpoublier">Mot de passe oublié ?</a></div>
-          </div>
+          </div>--> 
           <div class="field">
             <input type="submit" value="Se Connecter">
           </div>
