--- a/src/app/components/tableau-p/tableau-p.component.html
+++ b/src/app/components/tableau-p/tableau-p.component.html
@@ -38,7 +38,12 @@
         </form>
       </div>
         <div class="mt-5">
-          <input  class="search" type="text" name="search" [(ngModel)]="searchText" placeholder="Chercher professeur ">
+          <div class="input-group rounded" style="margin-bottom: 5px; margin-left: 4px; width: 50%;">
+            <input type="search"  name="search"  [(ngModel)]="searchText" class="form-control rounded" placeholder="Chercher professeur" aria-label="Search" aria-describedby="search-addon" />
+            <span class="input-group-text border-0" id="search-addon">
+              <i class="fas fa-search" ></i>
+            </span>
+          </div>
             <table class="table table-bordered">
               <thead>
                 <tr>
