--- a/src/app/components/archicourp/archicourp.component.html
+++ b/src/app/components/archicourp/archicourp.component.html
@@ -16,7 +16,7 @@
         </table>
          <div class="mt-5">
           <div class="input-group rounded" style="margin-bottom: 5px; margin-left: 49%; width: 50%;margin-top: 10px;margin-top: -5.5%;">
-            <input type="search"  name="search"  [(ngModel)]="searchText" class="form-control rounded" placeholder="Chercher document" aria-label="Search" aria-describedby="search-addon" />
+            <input type="search"  name="search"  [(ngModel)]="searchText" class="form-control rounded" placeholder="Chercher un cours" aria-label="Search" aria-describedby="search-addon" />
             <span class="input-group-text border-0" id="search-addon">
               <i class="fas fa-search" ></i>
             </span>
