--- a/src/app/components/archiexamen/archiexamen.component.html
+++ b/src/app/components/archiexamen/archiexamen.component.html
@@ -11,7 +11,7 @@
     <app-navbar4></app-navbar4>
     <div class="mt-0">
       <div class="input-group rounded" style="margin-bottom: 5px; margin-left: 4px; width: 50%; margin-top: 5%;">
-        <input type="search"  name="search"  [(ngModel)]="searchText" class="form-control rounded" placeholder="Chercher professeur" aria-label="Search" aria-describedby="search-addon" />
+        <input type="search"  name="search"  [(ngModel)]="searchText" class="form-control rounded" placeholder="Chercher un examen" aria-label="Search" aria-describedby="search-addon" />
         <span class="input-group-text border-0" id="search-addon">
           <i class="fas fa-search" ></i>
         </span>
